# prestige

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 415a56ddd831_add_workout_sessions_table_and_session_.py  4dbb3249fd55_initial_schema.py  7864a7208b84_add_unit_system_to_users.py  a1b2c3d4e5f6_add_user_profiles_table.py  b2c3d4e5f6a7_enable_rls_on_all_tables.py  c3d4e5f6a7b8_add_email_attempts_to_workout_sessions.py  d4e5f6a7b8c9_add_performance_indexes.py  d967aafe4d43_merge_rls_and_insight_logs_heads.py  e5f6a7b8c9d0_add_insight_logs_table.py  f6a7b8c9d0e1_add_activity_context_and_zones.py
app/: config.py  database.py  logging_config.py  main.py  rate_limit.py
app/jobs/: garmin_poller.py  session_emailer.py  token_refresher.py  wahoo_poller.py  webhook_cleanup.py  whoop_reconciler.py
app/middleware/: csrf.py
app/models/: __init__.py  connection.py  email_log.py  insight_log.py  password_reset.py  user.py  user_profile.py  webhook_event.py  workout.py  workout_session.py
app/routers/: auth.py  dashboard.py  ui.py
app/schemas/: user.py  workout.py
app/services/: email_service.py  log_redaction.py  narrative_generator.py  oauth_state.py  password.py  session_manager.py  token_manager.py  webhook_validator.py  (+2 more)
docs/: design-system-reference.md  technical-design-document.md
scripts/: debug_email_delivery.py  debug_sessions.py  fix_orphan_workouts.py  fix_wahoo_sport_types.py  merge_duplicate_sessions.py  regen_narratives.py  reset_password.py  verify_password.py
(+23 files in other folders)
