[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "workout-tracker"
version = "0.1.0"
description = "Multi-platform workout tracker with email summaries"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "cryptography>=44.0.0",
    "sendgrid>=6.11.0",
    "jinja2>=3.1.4",
    "apscheduler>=3.10.4",
    "whoopy>=0.3.0",
    "python-multipart>=0.0.18",
    "anthropic>=0.42.0",
    "garminconnect>=0.2.40",
    "pytz>=2024.1",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
